feat(java, module, junit): JPMS-aware test runner with unified detection and three-case launch logic (#27)